force-app/main/default/objects/Volunteer__c/Volunteer__c.object-meta.xml
<CustomObject>
    <description>Tracks volunteers who support food distribution and warehouse operations</description>
    <label>Volunteer</label>
    <nameField>
        <displayFormat>VOL-{0000}</displayFormat>
        <label>Volunteer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>