force-app/main/default/objects/Volunteer__c/fields/Old_Volunteer_Category__c.field-meta.xml
<CustomField>
    <fullName>Old_Volunteer_Category__c</fullName>
    <description>DEPRECATED - This field was replaced by Volunteer_Type__c in 2022. No longer used.</description>
    <label>Old Volunteer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Occasional</fullName>
            </value>
            <value>
                <fullName>Group Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>