force-app/main/default/objects/Volunteer__c/fields/Total_Hours_Volunteered__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Volunteered__c</fullName>
    <label>Total Hours Volunteered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Calculated by summing all completed Volunteer Shift hours</description>
</CustomField>