force-app/main/default/objects/Volunteer__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <label>Volunteer Name</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>