force-app/main/default/objects/Volunteer__c/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse Operations</fullName>
            </value>
            <value>
                <fullName>Food Distribution</fullName>
                <default>true</default>
                <label>Food Distribution</label>
            </value>
            <value>
                <fullName>Administrative Support</fullName>
            </value>
            <value>
                <fullName>Event Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>